# pidshark

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  build.rs
pidshark/: Cargo.toml  build.rs
pidshark-common/: Cargo.toml
pidshark-common/src/: lib.rs
pidshark-ebpf/: Cargo.toml
pidshark-ebpf/src/: main.rs  vmlinux.rs
pidshark/src/: main.rs  test.bpf.c
src/: main.rs
src/bpf/: common.h  exec.bpf.c  exec.skel.rs  maps.h  processes_trace.bpf.c  processes_trace.skel.rs
src/models/: process.rs
