[package]
name = "pidshark-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
pidshark-common = { path = "../pidshark-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "pidshark"
path = "src/main.rs"
