[package]
name = "pidshark"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
pidshark-common = { path = "../pidshark-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = "1"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

[[bin]]
name = "pidshark"
path = "src/main.rs"
